--- a/index.html
+++ b/index.html
@@ -6,14 +6,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css " integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="
+        anonymous " referrerpolicy="no-referrer " />
     <title>My Foods</title>
 </head>
 
 <body>
     <div class="header">
         <img src="logo/ohmyfood.png" alt="logo">
-        <i class="fas fa-map-marker-alt"></i>
     </div>
+    <div class="header1">
+        <i class="fas fa-map-marker-alt"></i>
+        <h4>Paris,Belleville</h4>
+    </div>
+    <div class="header2">
+        <h2>Book the menu you like</h2>
+        <p>Discover top-of-the-art restaurants we picked for you</p>
+        <button class="button">Explore our Restaurants</button>
+    </div>
+
+    <h2>How it works</h2>
+
+    <div class="works">
+        <div class="circle"><p>1</p></div>
+        <i class="fas fa-mobile-alt"></i>
+        <h4>Chose a restaurant</h4>
+    </div>
+
+    <div class="works">
+        <div class="circle"><p>2</p></div>
+        <i class="fas fa-list-ul"></i>
+        <h4>Chose a restaurant</h4>
+    </div>
+
+    <div class="works">
+        <div class="circle"><p>3</p></div>
+        <i class="fas fa-store"></i>
+        <h4>Chose a restaurant</h4>
+    </div>
+
+    <div class="Restaurants">
+    <h2>Restaurants</h2>
+
+
+    <div class="first">
+    <img src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
+     <div class="imgtext">
+         <h4>The Full Palette</h4>
+         <p>New York</p>
+         <i class="far fa-heart"></i>
+        </div>
+    </div>
+
+    <div class="first">
+        <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="wennington">
+         <div class="imgtext">
+             <h4>The Full Palette</h4>
+             <p>New York</p>
+             <i class="far fa-heart"></i>
+            </div>
+        </div>
+
+        <div class="first">
+            <img src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="wennington">
+             <div class="imgtext">
+                 <h4>The Full Palette</h4>
+                 <p>New York</p>
+                 <i class="far fa-heart"></i>
+                </div>
+            </div>
+
+            <div class="first">
+                <img src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="wennington">
+                 <div class="imgtext">
+                     <h4>The Full Palette</h4>
+                     <p>New York</p>
+                     <i class="far fa-heart"></i>
+                    </div>
+                </div>
+    </div>
+
+    <div class="footer">
+        <img src="logo/ohmyfood.png" alt="logo">
+
+
+
+    </div>
+
+
+
 </body>
 
 </html>
