--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     </div>
 
     <div class="first">
+        <a href="menu2.html">
         <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="wennington">
+        </a>
          <div class="imgtext">
              <h4>The Enchanted Plate</h4>
              <p>New York</p>
@@ -71,7 +73,9 @@
         </div>
 
         <div class="first">
+            <a href="menu3.html">
             <img src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="wennington">
+            </a>
              <div class="imgtext">
                  <h4>Bastille</h4>
                  <p>New York</p>
@@ -80,7 +84,9 @@
             </div>
 
             <div class="first">
+                <a href="menu4.html">
                 <img src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="wennington">
+                 </a>
                  <div class="imgtext">
                      <h4>Le Gourmand</h4>
                      <p>New York</p>
