Start with animations

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <div class="first">
         <a href="menu1.html">
+            <div class="new"><p>New</p></div>
     <img src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="wennington">
        </a>
      <div class="imgtext">
