--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     <div class="first">
         <a href="menu2.html">
+            <div class="new"><p>New</p></div>
         <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="wennington">
         </a>
          <div class="imgtext">
