--- a/menu2.html
+++ b/menu2.html
@@ -21,56 +21,61 @@
     <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="wennington">
      </div>
      <div class="menu">
-         <h4>The Full Palette</h4>
+         <h4>The Enchanted Plate</h4>
          <i class="far fa-heart fa-2x"></i>
     </div>
     <h3 class="topic">Entrees</h3>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
+     <h4>Foie Gras Raviole</h4>
+     <p>With truffle cream</p>
      <p class="price">25£</p>
     </div>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
-     <p class="price">25£</p>
+     <h4>Oscietra Caviar</h4>
+     <p>With buckwheat blinis</p>
+     <p class="price">35£</p>
     </div>
     <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Lobster and Leek Foam</h4>
+        <p>Marinated with orange zest</p>
+        <p class="price">20£</p>
        </div>
+    <div class="section">
+        <h4>Duck Foie Gras</h4>
+        <p>with fig jam and grilled baguette</p>
+        <p class="price">35£</p>
+    </div>
        <h3 class="topic">Main Dish</h3>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Fresh Buttered Scallops</h4>
+        <p>with white celery puree</p>
+        <p class="price">40£</p>
        </div>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Pan-Fried Lobster</h4>
+        <p>with mashed sweet potatoes</p>
+        <p class="price">35£</p>
        </div>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Braised Ox Tail</h4>
+        <p>with wild rice and lemon zest</p>
+        <p class="price">44£</p>
        </div>
        <h3 class="topic">Desserts</h3>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
-     <p class="price">25£</p>
+     <h4>Chocolate and Hazelnut Macaroons</h4>
+     <p>with Caramel butter ice cream</p>
+     <p class="price">18£</p>
     </div>
     <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Baba au rhum</h4>
+        <p>with lemon drizzle</p>
+        <p class="price">22£</p>
        </div>
        <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Lemon Meringue Pie</h4>
+        <p>Destructured</p>
+        <p class="price">23£</p>
        </div>
 
        <button class="button">Order</button>
