--- a/menu4.html
+++ b/menu4.html
@@ -21,56 +21,56 @@
     <img src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="wennington">
      </div>
      <div class="menu">
-         <h4>The Full Palette</h4>
+         <h4>Le Gourmand</h4>
          <i class="far fa-heart fa-2x"></i>
     </div>
     <h3 class="topic">Entrees</h3>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
+     <h4>Tuna Carpaccio</h4>
+     <p>seasoned with yuzu</p>
      <p class="price">25£</p>
     </div>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
-     <p class="price">25£</p>
+     <h4>Crunchy Lobster Croquets</h4>
+     <p>with seasonal vegetables</p>
+     <p class="price">35£</p>
     </div>
     <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Mushroom soup</h4>
+        <p>with truffles</p>
+        <p class="price">20£</p>
        </div>
        <h3 class="topic">Main Dish</h3>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Roast Chicken with Provincal Herbs</h4>
+        <p>with truffle cream</p>
+        <p class="price">40£</p>
        </div>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Roasted Lobster</h4>
+        <p>with seasonal vegtables</p>
+        <p class="price">35£</p>
        </div>
        <div class="section">
-        <h4>Main Dish</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Angus Beef Ribs</h4>
+        <p>with mashed parsnips</p>
+        <p class="price">44£</p>
        </div>
        <h3 class="topic">Desserts</h3>
     <div class="section">
-     <h4>Escargot</h4>
-     <p>With southern French spices</p>
-     <p class="price">25£</p>
+     <h4>Assorted Dessert Plate</h4>
+     <p>Chef's choice</p>
+     <p class="price">18£</p>
     </div>
     <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Creme brulee</h4>
+        <p>Revisited</p>
+        <p class="price">22£</p>
        </div>
        <div class="section">
-        <h4>Escargot</h4>
-        <p>With southern French spices</p>
-        <p class="price">25£</p>
+        <h4>Tiramisu</h4>
+        <p>with hazelnuts</p>
+        <p class="price">23£</p>
        </div>
 
        <button class="button">Order</button>
