--- a/menu4.html
+++ b/menu4.html
@@ -25,49 +25,49 @@
          <i class="far fa-heart fa-2x"></i>
     </div>
     <h3 class="topic">Entrees</h3>
-    <div class="section">
+    <div class="section1">
      <h4>Tuna Carpaccio</h4>
      <p>seasoned with yuzu</p>
      <p class="price">25£</p>
     </div>
-    <div class="section">
+    <div class="section2">
      <h4>Crunchy Lobster Croquets</h4>
      <p>with seasonal vegetables</p>
      <p class="price">35£</p>
     </div>
-    <div class="section">
+    <div class="section3">
         <h4>Mushroom soup</h4>
         <p>with truffles</p>
         <p class="price">20£</p>
        </div>
        <h3 class="topic">Main Dish</h3>
-       <div class="section">
+       <div class="section1">
         <h4>Roast Chicken with Provincal Herbs</h4>
         <p>with truffle cream</p>
         <p class="price">40£</p>
        </div>
-       <div class="section">
+       <div class="section2">
         <h4>Roasted Lobster</h4>
         <p>with seasonal vegtables</p>
         <p class="price">35£</p>
        </div>
-       <div class="section">
+       <div class="section3">
         <h4>Angus Beef Ribs</h4>
         <p>with mashed parsnips</p>
         <p class="price">44£</p>
        </div>
        <h3 class="topic">Desserts</h3>
-    <div class="section">
+    <div class="section1">
      <h4>Assorted Dessert Plate</h4>
      <p>Chef's choice</p>
      <p class="price">18£</p>
     </div>
-    <div class="section">
+    <div class="section2">
         <h4>Creme brulee</h4>
         <p>Revisited</p>
         <p class="price">22£</p>
        </div>
-       <div class="section">
+       <div class="section3">
         <h4>Tiramisu</h4>
         <p>with hazelnuts</p>
         <p class="price">23£</p>
