--- a/menu3.html
+++ b/menu3.html
@@ -25,49 +25,49 @@
          <i class="far fa-heart fa-2x"></i>
     </div>
     <h3 class="topic">Entrees</h3>
-    <div class="section">
+    <div class="section1">
      <h4>Citrus Squid Carpaccio</h4>
      <p>with orange zest</p>
      <p class="price">25£</p>
     </div>
-    <div class="section">
+    <div class="section2">
      <h4>Grandmother's Vegetable Soup</h4>
      <p>Carrots,parsnips,Jerusalem artichoke</p>
      <p class="price">35£</p>
     </div>
-    <div class="section">
+    <div class="section3">
         <h4>Onion Soup</h4>
         <p>Revisted</p>
         <p class="price">20£</p>
        </div>
        <h3 class="topic">Main Dish</h3>
-       <div class="section">
+       <div class="section1">
         <h4>Scallops</h4>
         <p>with mashed parsnip</p>
         <p class="price">40£</p>
        </div>
-       <div class="section">
+       <div class="section2">
         <h4>Magret de canard</h4>
         <p>with masged potatoes</p>
         <p class="price">35£</p>
        </div>
-       <div class="section">
+       <div class="section3">
         <h4>Game Hen</h4>
         <p>with vegetable gnocchis</p>
         <p class="price">44£</p>
        </div>
        <h3 class="topic">Desserts</h3>
-    <div class="section">
+    <div class="section1">
      <h4>Floral Ice Cream</h4>
      <p>with hazelnut butter</p>
      <p class="price">18£</p>
     </div>
-    <div class="section">
+    <div class="section2">
         <h4>Chocolate Lava Cake</h4>
         <p>Revisited</p>
         <p class="price">22£</p>
        </div>
-       <div class="section">
+       <div class="section3">
         <h4>Napolean</h4>
         <p>with blueberries and marzipan</p>
         <p class="price">23£</p>
