Just add some code

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
          <h4>The Full Palette</h4>
          <p>New York</p>
          <i class="far fa-heart"></i>
+         <i class="fas fa-heart"></i>
         </div>
     </div>
 
