Add font awesome hart

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
        </a>
      <div class="imgtext">
          <h4>The Full Palette</h4>
-         <p>New York</p>
-         <i class="far fa-heart"></i>
-         <i class="fas fa-heart"></i>
+         <p>New York</p>           
+        <i class="far fa-heart fa-2x  fa-hover-hidden"></i>
+        <i class="fas fa-heart fa-2x fa-hover-show"></i>
         </div>
     </div>
 
@@ -71,7 +71,8 @@
          <div class="imgtext">
              <h4>The Enchanted Plate</h4>
              <p>New York</p>
-             <i class="far fa-heart"></i>
+             <i class="far fa-heart fa-2x  fa-hover-hidden"></i>
+        <i class="fas fa-heart fa-2x fa-hover-show"></i>
             </div>
         </div>
 
@@ -82,7 +83,8 @@
              <div class="imgtext">
                  <h4>Bastille</h4>
                  <p>New York</p>
-                 <i class="far fa-heart"></i>
+                 <i class="far fa-heart fa-2x  fa-hover-hidden"></i>
+        <i class="fas fa-heart fa-2x fa-hover-show"></i>
                 </div>
             </div>
 
@@ -93,7 +95,8 @@
                  <div class="imgtext">
                      <h4>Le Gourmand</h4>
                      <p>New York</p>
-                     <i class="far fa-heart"></i>
+                     <i class="far fa-heart fa-2x  fa-hover-hidden"></i>
+        <i class="fas fa-heart fa-2x fa-hover-show"></i>
                     </div>
                 </div>
     </div>
