--- a/menu1.html
+++ b/menu1.html
@@ -28,51 +28,79 @@
 
     <div class="section1">
      <h4>Escargot</h4>
-     <p>With southern French spices</p>
+     <p>With southern French spices </p>
      <p class="price">25£</p>
-     <i class="fas fa-check-circle fa-3x"></i>
+     <div class="item__check">
+         <i class="fas fa-check-circle   "></i>
+        </div>
     </div>
+
     <div class="section2">
      <h4>Duck Foie Gras</h4>
      <p>With black truffle shavings</p>
      <p class="price">35£</p> 
+     <div class="item__check">
+        <i class="fas fa-check-circle   "></i>
+       </div>
     </div>
+
     <div class="section3">
         <h4>Fried egg</h4>
         <p>...</p>
         <p class="price">20£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <h3 class="topic">Main Dish</h3>
        <div class="section1">
         <h4>Herb-Encrusted Steak</h4>
         <p>With delicately sliced and seasoned veg</p>
         <p class="price">40£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section2">
         <h4>Ox Tail Shepard's Pie</h4>
         <p>With black truffle and pureed parsnips</p>
         <p class="price">35£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section3">
         <h4>Filet of Sole</h4>
         <p>with citrus dressing</p>
         <p class="price">44£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <h3 class="topic">Desserts</h3>
     <div class="section1">
      <h4>Paris-Brest</h4>
      <p>Revisted</p>
      <p class="price">18£</p>
+     <div class="item__check">
+        <i class="fas fa-check-circle   "></i>
+       </div>
     </div>
     <div class="section2">
         <h4>Chocolate Macaroons</h4>
         <p>With vanilla ice cream</p>
         <p class="price">22£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section3">
         <h4>Chocolate Mousse</h4>
         <p>With spices and black truffle</p>
         <p class="price">23£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
 
        <button class="button">Order</button>
