--- a/menu2.html
+++ b/menu2.html
@@ -29,53 +29,83 @@
      <h4>Foie Gras Raviole</h4>
      <p>With truffle cream</p>
      <p class="price">25£</p>
+     <div class="item__check">
+        <i class="fas fa-check-circle   "></i>
+       </div>
     </div>
     <div class="section2">
      <h4>Oscietra Caviar</h4>
      <p>With buckwheat blinis</p>
      <p class="price">35£</p>
+     <div class="item__check">
+        <i class="fas fa-check-circle   "></i>
+       </div>
     </div>
     <div class="section3">
         <h4>Lobster and Leek Foam</h4>
         <p>Marinated with orange zest</p>
         <p class="price">20£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
     <div class="section4">
         <h4>Duck Foie Gras</h4>
         <p>with fig jam and grilled baguette</p>
         <p class="price">35£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
     </div>
        <h3 class="topic">Main Dish</h3>
        <div class="section1">
         <h4>Fresh Buttered Scallops</h4>
         <p>with white celery puree</p>
         <p class="price">40£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section2">
         <h4>Pan-Fried Lobster</h4>
         <p>with mashed sweet potatoes</p>
         <p class="price">35£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section3">
         <h4>Braised Ox Tail</h4>
         <p>with wild rice and lemon zest</p>
         <p class="price">44£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <h3 class="topic">Desserts</h3>
     <div class="section1">
      <h4>Chocolate and Hazelnut Macaroons</h4>
      <p>with Caramel butter ice cream</p>
      <p class="price">18£</p>
+     <div class="item__check">
+        <i class="fas fa-check-circle   "></i>
+       </div>
     </div>
     <div class="section2">
         <h4>Baba au rhum</h4>
         <p>with lemon drizzle</p>
         <p class="price">22£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
        <div class="section3">
         <h4>Lemon Meringue Pie</h4>
         <p>Destructured</p>
         <p class="price">23£</p>
+        <div class="item__check">
+            <i class="fas fa-check-circle   "></i>
+           </div>
        </div>
 
        <button class="button">Order</button>
