--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </div>
     <h2>How it works</h2>
 
+    
+
+
+
     <div class="works">
         <div class="circle"><p>1</p></div>
         <i class="fas fa-mobile-alt"></i>
@@ -75,6 +79,10 @@
             </div>
         </div>
 
+
+    
+
+
         <div class="first">
             <a href="menu3.html">
             <img src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="wennington">
@@ -117,7 +125,9 @@
 
     </div>
 
-
+    <div class="spiner">
+        <div class="loader"></div>
+    </div>
 
 </body>
 
